Funcionamiento de encriptador con la a y mostrar el mensaje en pantalla

--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,8 @@ textarea{
     position: absolute;
     top: 50px;
     right: 50px;
+    left: 900px;
+    bottom: 50px;
     background-color: white;
     padding: 40px;
     border:none;
