corregido el estilo y el aparecer/desaparecer del boton copiar

--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,7 @@ textarea{
     color: black;
 }
 .muñeco button{
+    visibility: hidden;
     position: absolute;
     bottom: 50px;
     left:90px;
