--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,15 @@ body{
     background-color: #add8e6;
     top:0;
 }
+header{
+    display: flex;
+}
+header h1{
+    margin: 50px 0px 0px 500px;
+    font-size: 40px;
+    font-family: 'Ubuntu', sans-serif;
+    color:#49416d;
+}
 .contenedor-logo{
     display: inline-block;
     max-width: 100%;
@@ -161,10 +170,10 @@ footer img{
     transition: all 0.5s;
 }
 footer img:hover{
-    transform: scale(1.3);
+    transform: scale(1.5);
 }
 /*CSS CELULAR*/
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 376px) {
     body{
         position: absolute;
         width: 375px;
@@ -268,14 +277,23 @@ footer img:hover{
     }
 }
 /*CSS TABLET*/
-@media screen and (max-width: 768px) and (min-width: 376px) {
+@media screen and (max-width: 768px) and (min-width: 377px) {
     body{
         position: absolute;
         width: 768px;
         max-width: 768px;
-        height: 1154px;
-        max-height:1154px ;
+        height: 1024px;
+        max-height:1024px ;
         background-color: #add8e6;
+    }
+    header{
+        display: flex;
+    }
+    header h1{
+        margin: 50px 0px 0px 200px;
+        font-size: 40px;
+        font-family: 'Ubuntu', sans-serif;
+        color:#49416d;
     }
     .caja{
         display: inline-block;
@@ -355,6 +373,19 @@ footer img:hover{
         border: solid 1px gray;
         border-radius: 20px;
         transition: 0.5s all;
+    }
+    .muñeco button{
+        visibility: hidden;
+        position: absolute;
+        bottom: 50px;
+        left:200px;
+        font-size: 20px;
+        width: 300px;
+        height: 70px;
+        border: solid 1px gray;
+        border-radius: 20px;
+        transition: 0.5s all;
+    
     }
     footer{
         font-family: 'Moon Dance', cursive;
