--- a/styles.css
+++ b/styles.css
@@ -178,28 +178,39 @@ footer img:hover{
         position: absolute;
         width: 375px;
         max-width: 375px;
-        height: 933px;
-        max-height:933px ;
         background-color: #add8e6;
+    }
+    header h1{
+        margin: 50px 0px 0px 30px;
+        font-size: 30px;
+        font-family: 'Ubuntu', sans-serif;
+        color:#49416d;
     }
     .caja{
         display: inline-block;
         width: 350px;
-        height: 500px;
+        height: 200px;
     }
     .texto-ingresado{
         margin-left: 25px;
         margin-right: 25px;
     }
+    .texto-ingresado textarea{
+        background-color: #add8e6;
+        resize: none;
+        border: none;
+        font-size: 20px;
+        color:#49416d;
+    }
     textarea{
         width: 350px;
-        height: 500px;
+        height: 200px;
         border: none;
     }
     .muñeco{
         position: absolute;
-        top: 900px;
-        left: 25px;
+        top: 550px;
+        left: 15px;
         background-color: white;
         padding: 40px;
         border:none;
@@ -207,7 +218,7 @@ footer img:hover{
         border-radius: 20px;
         box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
         transition: 0.5s all;
-        width: 270px;
+        width: 260px;
     }   
     .muñeco:hover{
         transform: scale(1.01);
@@ -216,22 +227,22 @@ footer img:hover{
     .muñeco h2{
         position:absolute;
         top: 10px;
-        right: 15px;
         font-weight: bolder;
-        font-size: 25px;
+        font-size: 15px;
         text-align: center;
         padding: 20px;
     }
     .muñeco img{
-        opacity: 0;
+        display: none;
         padding: 20px;
         margin-top: 20px;
         margin-bottom: 20px;
     }
     .muñeco p{
         position:absolute;
-        top: 70px;
-        right: 15px;
+        top: 30px;
+        left: 10px;
+        right: 10px;
         font-size: 15px;
         color: gray;
         margin-top: 20px;
@@ -243,6 +254,26 @@ footer img:hover{
         transform: scale(1.1);
         color: black;
     }
+    .muñeco button{
+        visibility: hidden;
+        position: absolute;
+        bottom: 20px;
+        left: 20px;
+        font-size: 15px;
+        width: 300px;
+        height: 40px;
+        border: solid 1px gray;
+        border-radius: 20px;
+        transition: 0.5s all;
+    
+    }
+    .botones-contenedor button:hover{
+        background-color: #49416d;
+        color: whitesmoke;
+        cursor: pointer;
+        transform: scale(1.05);
+        box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
+    }
     .botones-contenedor{
         padding: 10px;
         margin-left: 10px;
@@ -250,24 +281,25 @@ footer img:hover{
     .botones-contenedor p{
         margin: 25px;
         margin-top: 25px;
-        font-size: 10px;
+        font-size: 15px;
     }
     .botones-contenedor button{
-        font-size: 20px;
-        width: 325px;
-        height: 70px;
-        margin: 0px 20px 20px 20px;
+        font-size: 15px;
+        width: 340px;
+        height: 40px;
+        margin: 0px 0px 20px 0px;
         border: solid 1px gray;
         border-radius: 20px;
         transition: 0.5s all;
     }
     footer{
         font-family: 'Moon Dance', cursive;
-        font-size: 30px;
+        font-size: 20px;
         color: #49416d;
         display: flex;
         padding-top: 10px;
         margin-top: 200px;
+        width: 350px;
         max-width: 100%;
         max-height: 100%;
         justify-content: center;
@@ -316,7 +348,7 @@ footer img:hover{
         background-color: white;
         padding: 180px 180px 0px 180px;
         border:none;
-        height: 100px;
+        height: 280px;
         border-radius: 20px;
         box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
         transition: 0.5s all;
@@ -343,9 +375,12 @@ footer img:hover{
     .muñeco p{
         position:absolute;
         top: 70px;
-        right: 60px;
+        left: 30px;
+        bottom: 30px;
+        right:30px;
         font-size: 25px;
         color: gray;
+        margin-left: 10px;
         margin-top: 20px;
         text-align: center;
         text-decoration: underline dashed;
@@ -393,7 +428,7 @@ footer img:hover{
         color: #49416d;
         display: flex;
         padding-top: 10px;
-        margin-top: 300px;
+        margin-top: 460px;
         max-width: 100%;
         max-height: 100%;
         justify-content: center;
