--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/*CSS DESKTOP*/
+/*CSS DESKTOP 1920x1080 */
 #pag{
     visibility: hidden;
 }
@@ -6,20 +6,23 @@
     font-family: 'Ubuntu', sans-serif;
 }
 body{
+    display: flex;
+    flex-wrap: wrap;
     position: absolute;
-    width: 1440px;
-    max-width: 1440px;
-    height: 900px;
-    max-height:900px ;
+    width: 100%;
+    max-width: 1920px;
+    height: 100%;
+    max-height:1080px;
     background-color: #add8e6;
     top:0;
 }
 header{
     display: flex;
+    width: 100vw;
 }
 header h1{
-    margin: 50px 0px 0px 500px;
-    font-size: 40px;
+    margin: 3vh 30vw 0px 30vw;
+    font-size: 3vw;
     font-family: 'Ubuntu', sans-serif;
     color:#49416d;
 }
@@ -30,19 +33,16 @@ header h1{
     object-fit: contain;
 }
 .logo{
-    margin: 40px;
+    margin: 3vh 3vw;
 
 }
 .caja{
     display: inline-block;
-    width: 1440px;
-    height: 500px;
-}
-textarea{
-    width: 621px;
-    height: 525px;
+    width: 100%;
+    height: 60vh;
 }
 .texto-ingresado{
+    width: 60%;
     margin-left: 100px;
     margin-right: 100px;
 }
@@ -50,7 +50,8 @@ textarea{
     background-color: #add8e6;
     resize: none;
     border: none;
-    font-size: 30px;
+    width: 100%;
+    font-size: 2vw;
     color:#49416d;
 }
 .texto-ingresado textarea:focus{
@@ -62,18 +63,18 @@ textarea{
 }
 .muñeco{
     position: absolute;
-    top: 50px;
-    right: 50px;
-    left: 900px;
-    bottom: 50px;
+    top: 3vh;
+    right: 2vw;
+    bottom: 3vh;
     background-color: white;
     padding: 40px;
     border:none;
-    height: 650px;
+    height: 80vh;
     border-radius: 20px;
     box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
     transition: 0.5s all;
-    max-width: 400px;
+    max-width: 20vw;
+    width: 100%;
 }   
 .muñeco:hover{
     transform: scale(1.01);
@@ -81,17 +82,20 @@ textarea{
 }
 .muñeco h2{
     font-weight: bolder;
-    font-size: 25px;
+    font-size: 2vw;
     text-align: center;
     padding: 20px;
 }
 .muñeco img{
-    padding: 20px;
     margin-top: 20px;
     margin-bottom: 20px;
+    max-width: 339px;
+    max-height: 304px;
+    width: 100%;
+    height: 100%;
 }
 .muñeco p{
-    font-size: 25px;
+    font-size: 1vw;
     color: gray;
     margin-top: 20px;
     text-align: center;
@@ -127,20 +131,20 @@ textarea{
 }
 .botones-contenedor{
     padding: 10px;
-    margin-left: 120px;
+    margin-left: 3vw;
 }
 .botones-contenedor p{
     margin: 25px;
     margin-top: 25px;
-    font-size: 15px;
+    font-size: 2vh;
 }
 .botones-contenedor button{
-    font-size: 20px;
-    width: 300px;
-    height: 70px;
-    margin: 0px 20px 20px 20px;
+    font-size: 2vw;
+    width: 30vw;
+    height: 10vh;
+    margin: 0px 1vw 1vh 1vw;
     border: solid 1px gray;
-    border-radius: 20px;
+    border-radius: 20vw;
     transition: 0.5s all;
 }
 .botones-contenedor button:hover{
@@ -152,11 +156,12 @@ textarea{
 }
 footer{
     font-family: 'Moon Dance', cursive;
-    font-size: 30px;
+    font-size: 2vw;
     color: #49416d;
     display: flex;
     padding-top: 10px;
     max-width: 100%;
+    width: 1920px;
     max-height: 100%;
     justify-content: center;
     object-fit: contain;
@@ -172,249 +177,242 @@ footer img{
 footer img:hover{
     transform: scale(1.5);
 }
-/*CSS CELULAR*/
-@media screen and (max-width: 376px) {
+@media screen and (max-width:1280px) and (max-height:720px) {
     body{
-        position: absolute;
-        width: 375px;
-        max-width: 375px;
-        background-color: #add8e6;
-    }
-    header h1{
-        margin: 50px 0px 0px 30px;
-        font-size: 30px;
-        font-family: 'Ubuntu', sans-serif;
-        color:#49416d;
+        max-width: 1280px;
+        max-height:720px;
     }
     .caja{
         display: inline-block;
-        width: 350px;
-        height: 200px;
+        width: 100%;
+        height: 65vh;
     }
     .texto-ingresado{
-        margin-left: 25px;
-        margin-right: 25px;
-    }
-    .texto-ingresado textarea{
-        background-color: #add8e6;
-        resize: none;
-        border: none;
-        font-size: 20px;
-        color:#49416d;
-    }
-    textarea{
-        width: 350px;
-        height: 200px;
-        border: none;
-    }
-    .muñeco{
-        position: absolute;
-        top: 550px;
-        left: 15px;
-        background-color: white;
-        padding: 40px;
-        border:none;
-        height: 100px;
-        border-radius: 20px;
-        box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
-        transition: 0.5s all;
-        width: 260px;
-    }   
-    .muñeco:hover{
-        transform: scale(1.01);
-        box-shadow: 10px 10px 5px 5px rgba(0, 0, 0, 0.2);
-    }
-    .muñeco h2{
-        position:absolute;
-        top: 10px;
-        font-weight: bolder;
-        font-size: 15px;
-        text-align: center;
-        padding: 20px;
+        width: 50%;
+        margin-left: 100px;
+        margin-right: 100px;
     }
     .muñeco img{
-        display: none;
         padding: 20px;
         margin-top: 20px;
         margin-bottom: 20px;
-    }
-    .muñeco p{
-        position:absolute;
-        top: 30px;
-        left: 10px;
-        right: 10px;
-        font-size: 15px;
-        color: gray;
-        margin-top: 20px;
-        text-align: center;
-        text-decoration: underline dashed;
-        transition: 0.5s all;
-    }
-    .muñeco p:hover{
-        transform: scale(1.1);
-        color: black;
+        max-width: 339px;
+        max-height: 304px;
     }
     .muñeco button{
         visibility: hidden;
         position: absolute;
-        bottom: 20px;
-        left: 20px;
-        font-size: 15px;
-        width: 300px;
-        height: 40px;
+        bottom: 50px;
+        left:45px;
+        font-size: 20px;
+        width: 20vw;
+        height: 70px;
         border: solid 1px gray;
         border-radius: 20px;
         transition: 0.5s all;
     
     }
-    .botones-contenedor button:hover{
-        background-color: #49416d;
-        color: whitesmoke;
-        cursor: pointer;
-        transform: scale(1.05);
-        box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
-    }
-    .botones-contenedor{
-        padding: 10px;
-        margin-left: 10px;
-    }
-    .botones-contenedor p{
-        margin: 25px;
-        margin-top: 25px;
-        font-size: 15px;
-    }
-    .botones-contenedor button{
-        font-size: 15px;
-        width: 340px;
-        height: 40px;
-        margin: 0px 0px 20px 0px;
-        border: solid 1px gray;
-        border-radius: 20px;
-        transition: 0.5s all;
-    }
     footer{
-        font-family: 'Moon Dance', cursive;
-        font-size: 20px;
-        color: #49416d;
-        display: flex;
-        padding-top: 10px;
-        margin-top: 200px;
-        width: 350px;
-        max-width: 100%;
-        max-height: 100%;
-        justify-content: center;
-        object-fit: contain;
-        text-align: center;
-        align-items: baseline;
+        width: 1280px;
     }
 }
-/*CSS TABLET*/
-@media screen and (max-width: 768px) and (min-width: 377px) {
+/*Celulares*/
+@media screen and (max-width:1080px) and (max-height:1920px) {
     body{
-        position: absolute;
-        width: 768px;
-        max-width: 768px;
-        height: 1024px;
-        max-height:1024px ;
-        background-color: #add8e6;
-    }
-    header{
-        display: flex;
-    }
-    header h1{
-        margin: 50px 0px 0px 200px;
-        font-size: 40px;
-        font-family: 'Ubuntu', sans-serif;
-        color:#49416d;
+        max-width: 1080px;
+        max-height: 1920px;
     }
     .caja{
         display: inline-block;
-        width: 768px;
-        height: 500px;
+        width: 100%;
+        height: 15vh;
     }
     .texto-ingresado{
-        margin-left: 25px;
-        margin-right: 25px;
-    }
-    textarea{
-        width: 720px;
-        height: 500px;
-        border: none;
+        width: 50%;
+        margin-left: 100px;
+        margin-right: 100px;
     }
     .muñeco{
         position: absolute;
-        top: 820px;
-        left: 25px;
+        top: 650px;
+        left: 50px;
+        right: 50px;
+        bottom: 3vh;
         background-color: white;
-        padding: 180px 180px 0px 180px;
+        padding: 40px;
         border:none;
-        height: 280px;
+        height: 40vh;
         border-radius: 20px;
         box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
         transition: 0.5s all;
+        max-width: 80vw;
+        width: 100%;
     }   
-    .muñeco:hover{
-        transform: scale(1.01);
-        box-shadow: 10px 10px 5px 5px rgba(0, 0, 0, 0.2);
-    }
-    .muñeco h2{
-        position:absolute;
-        top: 10px;
-        right: 100px;
-        font-weight: bolder;
-        font-size: 30px;
-        text-align: center;
-        padding: 20px;
-    }
     .muñeco img{
-        opacity: 0;
         padding: 20px;
-        margin-top: 20px;
-        margin-bottom: 20px;
+        margin: 20px 200px 20px 200px;
+        max-width: 339px;
+        max-height: 304px;
     }
     .muñeco p{
-        position:absolute;
-        top: 70px;
-        left: 30px;
-        bottom: 30px;
-        right:30px;
         font-size: 25px;
         color: gray;
-        margin-left: 10px;
-        margin-top: 20px;
+        margin-top: 30px;
         text-align: center;
         text-decoration: underline dashed;
         transition: 0.5s all;
     }
-    .muñeco p:hover{
-        transform: scale(1.1);
-        color: black;
-    }
-    .botones-contenedor{
-        padding: 10px;
-        margin-left: 10px;
-        margin-bottom: 10px;
+    .muñeco h2{
+        font-weight: bolder;
+        font-size: 40px;
+        text-align: center;
+        padding: 20px;
     }
     .botones-contenedor p{
         margin: 25px;
         margin-top: 25px;
-        font-size: 20px;
+        font-size: 15px;
+    }
+    .texto-ingresado textarea{
+        background-color: #add8e6;
+        resize: none;
+        border: none;
+        width: 100%;
+        font-size: 30px;
+        color:#49416d;
     }
     .botones-contenedor button{
-        font-size: 20px;
-        width: 325px;
+        font-size: 30px;
+        width: 370px;
         height: 70px;
         margin: 0px 20px 20px 20px;
         border: solid 1px gray;
+        border-radius: 20vw;
+        transition: 0.5s all;
+    }
+    .botones-contenedor{
+        padding: 10px;
+        margin-left: 100px;
+    }
+    .muñeco button{
+        visibility: hidden;
+        position: absolute;
+        bottom: 50px;
+        left:310px;
+        font-size: 30px;
+        width: 300px;
+        height: 70px;
+        border: solid 1px gray;
         border-radius: 20px;
         transition: 0.5s all;
+    
+    }
+    .texto-ingresado{
+        width: 75%;
+        height: 100%;
+        margin-left: 100px;
+        margin-right: 100px;
+    }
+    .texto-ingresado textarea{
+        background-color: #add8e6;
+        resize: none;
+        border: none;
+        width: 100%;
+        height: 100%;
+        color:#49416d;
+    }
+    footer{
+        margin-top: 900px;
+        width: 1080px;
+        font-size: 30px;
+    }
+}
+@media screen and (max-width:720px) and (max-height:1280px) {
+    body{
+        max-width: 720px;
+        max-height: 1280px;
+    }
+    .caja{
+        display: inline-block;
+        width: 100%;
+        height: 15vh;
+    }
+    .texto-ingresado{
+        width: 50%;
+        margin-left: 100px;
+        margin-right: 100px;
+    }
+    .muñeco{
+        position: absolute;
+        top: 650px;
+        left: 30px;
+        right: 50px;
+        bottom: 3vh;
+        background-color: white;
+        padding: 40px;
+        border:none;
+        height: 30vh;
+        border-radius: 20px;
+        box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
+        transition: 0.5s all;
+        max-width: 80vw;
+        width: 100%;
+    }   
+    .muñeco img{
+        display: none;
+        padding: 20px;
+        margin: 20px 100px 20px 100px;
+        max-width: 339px;
+        max-height: 304px;
+    }
+    .muñeco p{
+        font-size: 25px;
+        color: gray;
+        margin-top: 30px;
+        text-align: center;
+        text-decoration: underline dashed;
+        transition: 0.5s all;
+    }
+    .muñeco h2{
+        font-weight: bolder;
+        font-size: 40px;
+        text-align: center;
+        padding: 20px;
+    }
+    .botones-contenedor p{
+        margin: 25px;
+        margin-top: 25px;
+        font-size: 15px;
+    }
+    .texto-ingresado textarea{
+        background-color: #add8e6;
+        resize: none;
+        border: none;
+        width: 100%;
+        font-size: 30px;
+        color:#49416d;
+    }
+    .botones-contenedor button{
+        font-size: 30px;
+        width: 550px;
+        height: 70px;
+        margin: 0px 20px 20px 20px;
+        border: solid 1px gray;
+        border-radius: 20vw;
+        transition: 0.5s all;
+    }
+    .botones-contenedor{
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
+        margin-left: 50px;
     }
     .muñeco button{
         visibility: hidden;
         position: absolute;
         bottom: 50px;
         left:200px;
-        font-size: 20px;
+        font-size: 30px;
         width: 300px;
         height: 70px;
         border: solid 1px gray;
@@ -422,24 +420,23 @@ footer img:hover{
         transition: 0.5s all;
     
     }
-    footer{
-        font-family: 'Moon Dance', cursive;
-        font-size: 40px;
-        color: #49416d;
-        display: flex;
-        padding-top: 10px;
-        margin-top: 460px;
-        max-width: 100%;
-        max-height: 100%;
-        justify-content: center;
-        object-fit: contain;
-        text-align: center;
-        align-items: baseline;
+    .texto-ingresado{
+        width: 75%;
+        height: 100%;
+        margin-left: 100px;
+        margin-right: 100px;
     }
-    footer img{
-        padding-top: 10px ;
-        height: 30px;
-        width: 30px;
-        transition: all 0.5s;
+    .texto-ingresado textarea{
+        background-color: #add8e6;
+        resize: none;
+        border: none;
+        width: 100%;
+        height: 100%;
+        color:#49416d;
+    }
+    footer{
+        margin-top: 520px;
+        width: 720px;
+        font-size: 30px;
     }
 }
