--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,6 @@
     font-family: 'Ubuntu', sans-serif;
 }
 body{
-    display: flex;
-    flex-wrap: wrap;
     position: absolute;
     width: 100%;
     max-width: 1920px;
@@ -21,7 +19,7 @@ header{
     width: 100vw;
 }
 header h1{
-    margin: 3vh 30vw 0px 30vw;
+    margin: 3vw 30vw 0px 30vw;
     font-size: 3vw;
     font-family: 'Ubuntu', sans-serif;
     color:#49416d;
@@ -33,13 +31,13 @@ header h1{
     object-fit: contain;
 }
 .logo{
-    margin: 3vh 3vw;
+    margin: 3vw 3vw;
 
 }
 .caja{
     display: inline-block;
     width: 100%;
-    height: 60vh;
+    height: 60vw;
 }
 .texto-ingresado{
     width: 60%;
@@ -63,13 +61,13 @@ header h1{
 }
 .muñeco{
     position: absolute;
-    top: 3vh;
+    top: 3vw;
     right: 2vw;
-    bottom: 3vh;
+    bottom: 3vw;
     background-color: white;
     padding: 40px;
     border:none;
-    height: 80vh;
+    height: 80vw;
     border-radius: 20px;
     box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
     transition: 0.5s all;
@@ -80,12 +78,6 @@ header h1{
     transform: scale(1.01);
     box-shadow: 10px 10px 5px 5px rgba(0, 0, 0, 0.2);
 }
-.muñeco h2{
-    font-weight: bolder;
-    font-size: 2vw;
-    text-align: center;
-    padding: 20px;
-}
 .muñeco img{
     margin-top: 20px;
     margin-bottom: 20px;
@@ -94,6 +86,13 @@ header h1{
     width: 100%;
     height: 100%;
 }
+.muñeco h2{
+    font-weight: bolder;
+    font-size: 2vw;
+    text-align: center;
+    padding: 20px;
+}
+
 .muñeco p{
     font-size: 1vw;
     color: gray;
@@ -109,8 +108,8 @@ header h1{
 .muñeco button{
     visibility: hidden;
     position: absolute;
-    bottom: 50px;
-    left:90px;
+    bottom: 20vw;
+    left:50vw;
     font-size: 20px;
     width: 300px;
     height: 70px;
@@ -131,18 +130,18 @@ header h1{
 }
 .botones-contenedor{
     padding: 10px;
-    margin-left: 3vw;
+    margin-left: 4vw;
 }
 .botones-contenedor p{
     margin: 25px;
     margin-top: 25px;
-    font-size: 2vh;
+    font-size: 2vw;
 }
 .botones-contenedor button{
-    font-size: 2vw;
-    width: 30vw;
-    height: 10vh;
-    margin: 0px 1vw 1vh 1vw;
+    font-size: 30px;
+    width: 550px;
+    height: 70px;
+    margin: 0px 2vw 1vw 2vw;
     border: solid 1px gray;
     border-radius: 20vw;
     transition: 0.5s all;
@@ -156,7 +155,7 @@ header h1{
 }
 footer{
     font-family: 'Moon Dance', cursive;
-    font-size: 2vw;
+    font-size: 4vw;
     color: #49416d;
     display: flex;
     padding-top: 10px;
@@ -177,266 +176,442 @@ footer img{
 footer img:hover{
     transform: scale(1.5);
 }
-@media screen and (max-width:1280px) and (max-height:720px) {
+@media only screen and (max-width: 320px){
     body{
-        max-width: 1280px;
-        max-height:720px;
+        max-width: 320px;
+    }
+    header h1{
+        font-size: 7vw;
+        margin: 10vw 30vw 0px 20vw;
     }
     .caja{
         display: inline-block;
-        width: 100%;
-        height: 65vh;
+        width: 320px;
+        height: 30vw;
     }
     .texto-ingresado{
-        width: 50%;
-        margin-left: 100px;
-        margin-right: 100px;
-    }
-    .muñeco img{
-        padding: 20px;
-        margin-top: 20px;
-        margin-bottom: 20px;
-        max-width: 339px;
-        max-height: 304px;
-    }
-    .muñeco button{
-        visibility: hidden;
-        position: absolute;
-        bottom: 50px;
-        left:45px;
-        font-size: 20px;
-        width: 20vw;
-        height: 70px;
-        border: solid 1px gray;
-        border-radius: 20px;
-        transition: 0.5s all;
-    
-    }
-    footer{
-        width: 1280px;
-    }
-}
-/*Celulares*/
-@media screen and (max-width:1080px) and (max-height:1920px) {
-    body{
-        max-width: 1080px;
-        max-height: 1920px;
-    }
-    .caja{
-        display: inline-block;
-        width: 100%;
-        height: 15vh;
-    }
-    .texto-ingresado{
-        width: 50%;
-        margin-left: 100px;
-        margin-right: 100px;
-    }
-    .muñeco{
-        position: absolute;
-        top: 650px;
-        left: 50px;
-        right: 50px;
-        bottom: 3vh;
-        background-color: white;
-        padding: 40px;
-        border:none;
-        height: 40vh;
-        border-radius: 20px;
-        box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
-        transition: 0.5s all;
-        max-width: 80vw;
-        width: 100%;
-    }   
-    .muñeco img{
-        padding: 20px;
-        margin: 20px 200px 20px 200px;
-        max-width: 339px;
-        max-height: 304px;
-    }
-    .muñeco p{
-        font-size: 25px;
-        color: gray;
-        margin-top: 30px;
-        text-align: center;
-        text-decoration: underline dashed;
-        transition: 0.5s all;
-    }
-    .muñeco h2{
-        font-weight: bolder;
-        font-size: 40px;
-        text-align: center;
-        padding: 20px;
-    }
-    .botones-contenedor p{
-        margin: 25px;
-        margin-top: 25px;
-        font-size: 15px;
+        width: 70%;
+        margin-left: 25px;
     }
     .texto-ingresado textarea{
-        background-color: #add8e6;
-        resize: none;
-        border: none;
-        width: 100%;
-        font-size: 30px;
-        color:#49416d;
-    }
-    .botones-contenedor button{
-        font-size: 30px;
-        width: 370px;
-        height: 70px;
-        margin: 0px 20px 20px 20px;
-        border: solid 1px gray;
-        border-radius: 20vw;
-        transition: 0.5s all;
-    }
-    .botones-contenedor{
-        padding: 10px;
-        margin-left: 100px;
-    }
-    .muñeco button{
-        visibility: hidden;
-        position: absolute;
-        bottom: 50px;
-        left:310px;
-        font-size: 30px;
-        width: 300px;
-        height: 70px;
-        border: solid 1px gray;
-        border-radius: 20px;
-        transition: 0.5s all;
-    
-    }
-    .texto-ingresado{
-        width: 75%;
-        height: 100%;
-        margin-left: 100px;
-        margin-right: 100px;
-    }
-    .texto-ingresado textarea{
-        background-color: #add8e6;
-        resize: none;
-        border: none;
-        width: 100%;
-        height: 100%;
-        color:#49416d;
-    }
-    footer{
-        margin-top: 900px;
-        width: 1080px;
-        font-size: 30px;
-    }
-}
-@media screen and (max-width:720px) and (max-height:1280px) {
-    body{
-        max-width: 720px;
-        max-height: 1280px;
-    }
-    .caja{
-        display: inline-block;
-        width: 100%;
-        height: 15vh;
-    }
-    .texto-ingresado{
-        width: 50%;
-        margin-left: 100px;
-        margin-right: 100px;
+        font-size: 3vw;
     }
     .muñeco{
-        position: absolute;
-        top: 650px;
-        left: 30px;
-        right: 50px;
-        bottom: 3vh;
-        background-color: white;
-        padding: 40px;
-        border:none;
-        height: 30vh;
-        border-radius: 20px;
-        box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
-        transition: 0.5s all;
-        max-width: 80vw;
-        width: 100%;
-    }   
+        top: 90vw;
+        left: 3.5vw;
+        height: 45vw;
+        max-width: 65vw;
+    }  
     .muñeco img{
         display: none;
-        padding: 20px;
-        margin: 20px 100px 20px 100px;
-        max-width: 339px;
-        max-height: 304px;
-    }
-    .muñeco p{
-        font-size: 25px;
-        color: gray;
-        margin-top: 30px;
-        text-align: center;
-        text-decoration: underline dashed;
-        transition: 0.5s all;
     }
     .muñeco h2{
         font-weight: bolder;
-        font-size: 40px;
+        font-size: 4vw;
         text-align: center;
-        padding: 20px;
+        padding: 10px;
+    }
+    .muñeco p{
+        font-size: 3vw;
+    }
+    .muñeco button{
+        width: 150px;
+        height: 30px;
+        left:70px;
+        bottom: 10px;
+        font-size: 10px;
+    }
+    .botones-contenedor button{
+        font-size: 10px;
+        width: 40vw;
+        height: 30px;
+        margin: 0px 2vw 1vw 2vw;
+        border: solid 1px gray;
+        border-radius: 20px;
+        transition: 0.5s all;
+    }
+    footer{
+        padding-top: 10px;
+        max-width: 100%;
+        width: 100vw;
+        max-height: 100%;
+        margin-top: 70vw;
+    }
+}
+@media only screen and ((max-width: 375px) and (min-width: 321px)){
+    body{
+        max-width: 375px;
+    }
+    header h1{
+        font-size: 7vw;
+        margin: 10vw 30vw 0px 20vw;
+    }
+    .caja{
+        display: inline-block;
+        width: 375px;
+        height: 30vw;
+    }
+    .texto-ingresado{
+        width: 70%;
+        margin-left: 25px;
+    }
+    .texto-ingresado textarea{
+        font-size: 3vw;
+    }
+    .muñeco{
+        top: 85vw;
+        left: 6vw;
+        height: 45vw;
+        max-width: 65vw;
+    }  
+    .muñeco img{
+        display: none;
+    }
+    .muñeco h2{
+        font-weight: bolder;
+        font-size: 4vw;
+        text-align: center;
+        padding: 10px;
+    }
+    .muñeco p{
+        font-size: 3vw;
+    }
+    .muñeco button{
+        width: 150px;
+        height: 30px;
+        left:85px;
+        bottom: 10px;
+        font-size: 10px;
+    }
+    .botones-contenedor button{
+        font-size: 10px;
+        width: 40vw;
+        height: 30px;
+        margin: 0px 2vw 1vw 2vw;
+        border: solid 1px gray;
+        border-radius: 20px;
+        transition: 0.5s all;
+    }
+    footer{
+        padding-top: 10px;
+        max-width: 100%;
+        width: 100vw;
+        max-height: 100%;
+        margin-top: 70vw;
+    }
+}
+@media only screen and (max-width: 425px) and (min-width:376px){
+    body{
+        max-width: 425px;
+    }
+    header h1{
+        font-size: 7vw;
+        margin: 10vw 30vw 0px 20vw;
+    }
+    .caja{
+        display: inline-block;
+        width: 425px;
+        height: 30vw;
+    }
+    .texto-ingresado{
+        width: 70%;
+        margin-left: 25px;
+    }
+    .texto-ingresado textarea{
+        font-size: 3vw;
+    }
+    .muñeco{
+        top: 80vw;
+        left: 6vw;
+        height: 45vw;
+        max-width: 65vw;
+    }  
+    .muñeco img{
+        display: none;
+    }
+    .muñeco h2{
+        font-weight: bolder;
+        font-size: 4vw;
+        text-align: center;
+        padding: 10px;
+    }
+    .muñeco p{
+        font-size: 3vw;
+    }
+    .muñeco button{
+        width: 150px;
+        height: 30px;
+        left:100px;
+        bottom: 10px;
+        font-size: 10px;
+    }
+    .botones-contenedor button{
+        font-size: 10px;
+        width: 40vw;
+        height: 30px;
+        margin: 0px 2vw 1vw 2vw;
+        border: solid 1px gray;
+        border-radius: 20px;
+        transition: 0.5s all;
+    }
+    footer{
+        padding-top: 10px;
+        max-width: 100%;
+        width: 100vw;
+        max-height: 100%;
+        margin-top: 70vw;
+    }
+}
+@media only screen and (max-width: 768px) and (min-width:426px){
+    body{
+        max-width: 768px;
+    }
+    header h1{
+        font-size: 3vw;
+        margin: 5vw 30vw 0px 30vw;
+    }
+    .caja{
+        display: inline-block;
+        width: 768px;
+        height: 30vw;
+    }
+    .texto-ingresado{
+        width: 70%;
+        margin-left: 55px;
+    }
+    .texto-ingresado textarea{
+        font-size: 2vw;
+    }
+    .muñeco{
+        top: 5vw;
+        right: 6vw;
+        height: 35vw;
+        max-width: 25vw;
+    }  
+    .muñeco img{
+        display: none;
+    }
+    .muñeco h2{
+        font-weight: bolder;
+        font-size: 3vw;
+        text-align: center;
+        padding: 10px;
+    }
+    .muñeco p{
+        font-size: 1.5vw;
+    }
+    .muñeco button{
+        width: 150px;
+        height: 30px;
+        left:70px;
+        bottom: 10px;
+        font-size: 10px;
+    }
+    .botones-contenedor button{
+        font-size: 2vw;
+        width: 40vw;
+        height: 5vw;
+        margin: 0px 2vw 1vw 2vw;
+        border: solid 1px gray;
+        border-radius: 20px;
+        transition: 0.5s all;
+    }
+    footer{
+        padding-top: 10px;
+        max-width: 100%;
+        width: 100vw;
+        max-height: 100%;
+    }
+}
+@media only screen and (max-width: 992px) and (min-width:769px){
+    body{
+        max-width: 992px;
+    }
+    header h1{
+        font-size: 3vw;
+        margin: 5vw 30vw 0px 30vw;
+    }
+    .caja{
+        display: inline-block;
+        width: 768px;
+        height: 30vw;
+    }
+    .texto-ingresado{
+        width: 70%;
+        margin-left: 55px;
+    }
+    .texto-ingresado textarea{
+        font-size: 2vw;
+    }
+    .muñeco{
+        top: 5vw;
+        right: 6vw;
+        height: 40vw;
+        max-width: 25vw;
+    }  
+
+    .muñeco h2{
+        font-weight: bolder;
+        font-size: 2vw;
+        text-align: center;
+        padding: 10px;
+    }
+    .muñeco p{
+        font-size: 1.5vw;
+    }
+    .muñeco button{
+        width: 200px;
+        height: 50px;
+        left:65px;
+        bottom: 10px;
+        font-size: 20px;
     }
     .botones-contenedor p{
         margin: 25px;
         margin-top: 25px;
-        font-size: 15px;
-    }
-    .texto-ingresado textarea{
-        background-color: #add8e6;
-        resize: none;
-        border: none;
-        width: 100%;
-        font-size: 30px;
-        color:#49416d;
+        font-size: 1vw;
     }
     .botones-contenedor button{
-        font-size: 30px;
-        width: 550px;
-        height: 70px;
-        margin: 0px 20px 20px 20px;
-        border: solid 1px gray;
-        border-radius: 20vw;
-        transition: 0.5s all;
-    }
-    .botones-contenedor{
-        display: flex;
-        flex-direction: column;
-        padding: 10px;
-        margin-left: 50px;
-    }
-    .muñeco button{
-        visibility: hidden;
-        position: absolute;
-        bottom: 50px;
-        left:200px;
-        font-size: 30px;
-        width: 300px;
-        height: 70px;
+        font-size: 2vw;
+        width: 25vw;
+        height: 5vw;
+        margin: 0px 1vw 1vw 1vw;
         border: solid 1px gray;
         border-radius: 20px;
         transition: 0.5s all;
-    
-    }
-    .texto-ingresado{
-        width: 75%;
-        height: 100%;
-        margin-left: 100px;
-        margin-right: 100px;
-    }
-    .texto-ingresado textarea{
-        background-color: #add8e6;
-        resize: none;
-        border: none;
-        width: 100%;
-        height: 100%;
-        color:#49416d;
     }
     footer{
-        margin-top: 520px;
-        width: 720px;
-        font-size: 30px;
+        padding-top: 10px;
+        max-width: 100%;
+        width: 100vw;
+        max-height: 100%;
+    }
+}
+@media only screen and (max-width: 1200px) and (min-width:993px){
+    body{
+        max-width: 1200px;
+    }
+    header h1{
+        font-size: 3vw;
+        margin: 5vw 30vw 0px 30vw;
+    }
+    .caja{
+        display: inline-block;
+        width: 768px;
+        height: 30vw;
+    }
+    .texto-ingresado{
+        width: 70%;
+        margin-left: 55px;
+    }
+    .texto-ingresado textarea{
+        font-size: 2vw;
+    }
+    .muñeco{
+        top: 3vw;
+        left: 65vw;
+        height: 40vw;
+        max-width: 25vw;
+    }  
+
+    .muñeco h2{
+        font-weight: bolder;
+        font-size: 2vw;
+        text-align: center;
+        padding: 10px;
+    }
+    .muñeco p{
+        font-size: 1.5vw;
+    }
+    .muñeco button{
+        width: 200px;
+        height: 50px;
+        left:85px;
+        bottom: 10px;
+        font-size: 20px;
+    }
+    .botones-contenedor p{
+        margin: 25px;
+        margin-top: 25px;
+        font-size: 1vw;
+    }
+    .botones-contenedor button{
+        font-size: 2vw;
+        width: 25vw;
+        height: 5vw;
+        margin: 0px 1vw 1vw 1vw;
+        border: solid 1px gray;
+        border-radius: 20px;
+        transition: 0.5s all;
+    }
+    footer{
+        padding-top: 10px;
+        max-width: 100%;
+        width: 100vw;
+        max-height: 100%;
+    }
+}
+@media only screen and (max-width: 1920px) and (min-width:1201px){
+    body{
+        max-width: 1920px;
+    }
+    header h1{
+        font-size: 3vw;
+        margin: 5vw 30vw 0px 30vw;
+    }
+    .caja{
+        display: inline-block;
+        width: 768px;
+        height: 30vw;
+    }
+    .texto-ingresado{
+        width: 70%;
+        margin-left: 55px;
+    }
+    .texto-ingresado textarea{
+        font-size: 2vw;
+    }
+    .muñeco{
+        top: 3vw;
+        left: 65vw;
+        height: 40vw;
+        max-width: 25vw;
+    }  
+
+    .muñeco h2{
+        font-weight: bolder;
+        font-size: 2vw;
+        text-align: center;
+        padding: 10px;
+    }
+    .muñeco p{
+        font-size: 1.5vw;
+    }
+    .muñeco button{
+        width: 300px;
+        bottom: 20vw;
+        left:5vw;
+        bottom: 20px;
+        font-size: 20px;
+    }
+    .botones-contenedor p{
+        margin: 25px;
+        margin-top: 25px;
+        font-size: 1vw;
+    }
+    .botones-contenedor button{
+        font-size: 2vw;
+        width: 25vw;
+        height: 5vw;
+        margin: 0px 1vw 1vw 1vw;
+        border: solid 1px gray;
+        border-radius: 20px;
+        transition: 0.5s all;
+    }
+    footer{
+        padding-top: 10px;
+        max-width: 100%;
+        width: 100vw;
+        max-height: 100%;
     }
 }
